Don't dispatch blur/focus events if the element's page is not focused.

Don't dispatch blur/focus events if the element's page is not focused.

https://bugs.webkit.org/show_bug.cgi?id=125393

Reviewed by NOBODY (OOPS!).

Partial Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=164069

When the page loses focus a blur event is dispatched once, prevent a second dispatch (via e.g. programmatic blur()-ing), when a page doesn't have focus, prevent a focus event dispatch (via e.g. programmatic focus()-ing), as it will receive a focus event when the page regains focus.

* Source/WebCore/dom/Document.cpp:
(Document::setFocusedElement): Added Comment and logic to trigger "blur" event upon focus